remove project milestone text

--- a/f24/index.html
+++ b/f24/index.html
@@ -1120,7 +1120,7 @@ Semantic/Instance/Panoptic segmentation </br> -->
           <li><a href="https://www.dropbox.com/scl/fi/5j3mtw96vfqdcvg9hi3j1/Lecture-26.pdf?rlkey=r4qp7a1o2qof4iim70x30qsi6&dl=0" target="_blank">[Slides]</a></li>
         </td>
         <td>
-            Project milestone due (Mar. 31)
+            <!-- Project milestone due (Mar. 31) -->
         </td>
       </tr>
 
