--- a/f24/index.html
+++ b/f24/index.html
@@ -1464,7 +1464,7 @@ Semantic/Instance/Panoptic segmentation </br> -->
                      </tr></thead>
                      <tr class="alternate"><td>Yuan  </td><td>TBA @ 245 Beacon Rm. 528E</td></tr> 
                      <tr class="alternate"><td>Lejun </td><td>M 5-6, 5-7PM if needed, W 5-6PM @ CS Lab</td></tr>
-                     <tr class="alternate"><td>Yunhan </td><td>TW TH, TBA @ CS Lab</td></tr>
+                     <tr class="alternate"><td>Yunhan </td><td>TW TH 6-7PM @ CS Lab</td></tr>
                    </tbody></table>
                     <div align="left" style="padding-left: 4%; margin-top: -30px">
                     <ul>
