--- a/f24/index.html
+++ b/f24/index.html
@@ -179,7 +179,7 @@
                         </td>
                         <td>
                           <div class="staff">
-                            <div><img src="src/blankuser.jpg" class="staff"></div>
+                            <div><img src="src/YunhanLiu.jpg" class="staff"></div>
                             <div><b><a href="https://www.linkedin.com/in/yunhan-liu-68759629a/" class="stafflink" target="_blank" style="color: #2EA9DF;">Yunhan Liu</a></b></div>
                             <div>Teaching Assistant</div>
                           </div>
