--- a/f24/index.html
+++ b/f24/index.html
@@ -74,16 +74,22 @@
                 <div class="spotlight" style="width: 90%; text-align: left">
                     <div class="content">
                     <p>
-
-
                     Deep Learning is rapidly emerging as one of the most successful and widely applicable sets of techniques across a range of domains (vision, language, speech, reasoning, robotics, medicine, science, and AI in general), leading to significant commercial success, transforming people's lives, and opening up exciting new directions that may previously have seemed out of reach.
+                    </p>
 
-                    This course will introduce students to the basics of Neural Networks (NNs) and expose them to cutting-edge research. It is structured into modules (Background, Convolutional NNs, NN Training, Sequence Modeling, Self-Supervised Learning, Generative Modeling, and Frontiers). These modules will be delivered through instructor-led lectures and TA-led tutorials, reinforced with assignments that cover both theoretical and practical aspects. The course will also include a project that allows students to explore an area of Deep Learning that interests them in more depth.
+                    <p style="margin-top: -30px;">
+                    This course will introduce students to the basics of Neural Networks (NNs) and expose them to cutting-edge research. It is structured into modules (Background, Convolutional NNs, NN Training, Sequence Modeling, Self-Supervised Learning, Generative Modeling, and Frontiers). These modules will be delivered through instructor-led lectures and TA-led tutorials, reinforced with assignments that cover both theoretical and practical aspects. The course will also include a project that allows students to explore an area of Deep Learning that interests them in more depth. 
+                    </p>
 
-                    At the end of the course, guest speakers will be invited to share the latest research developments in academia and industry, offering valuable insights and broadening students' horizons in this dynamic field.
+                    <p style="margin-top: -30px;"> 
+                    At the end of the course, guest speakers will be invited to share the latest research developments in academia and industry, offering valuable insights and broadening students' horizons in this dynamic field. 
+                    </p>
 
                     
-                    <div style="padding-left: 4%; margin-top: -30px">
+
+
+                    
+                    <div style="padding-left: 4%; margin-top: -20px">
                     <!-- <div style="padding-left: 4%; margin-top: -30px"> -->
                     <ul>
                         <li><b>Prerequisites:</b> 
