--- a/f24/index.html
+++ b/f24/index.html
@@ -380,8 +380,8 @@
         <td> 
           <ul class="materials">
               <!-- <li>[T] Chap. 1, [Z] <a href="https://d2l.ai/chapter_introduction/index.html">Chap. 1</a></li> -->
-              <li><a href="https://www.dropbox.com/scl/fi/ffykeoybnsax55l9q9qdt/Lecture-1.pdf?rlkey=xh9lv8pufz7wk9kixa5a7uyk5&dl=0" target="_blank">[Slides]</a> </li>
-              <li><a href="https://www.dropbox.com/home/csci3399/s24/slides?preview=Waymo.MOV" target="_blank">[Waymo Demo]</a> </li>
+              <li><a href="https://www.dropbox.com/scl/fi/fl1cjdot7e2syoisms0x8/L1_Introduction.pdf?rlkey=hcijzcgzr22bd9ivamjwhj0dl&st=pfasjhzg&dl=0" target="_blank">[Slides]</a> </li>
+              <!-- <li><a href="https://www.dropbox.com/home/csci3399/s24/slides?preview=Waymo.MOV" target="_blank">[Waymo Demo]</a> </li> -->
               <li><a href="https://cs231n.github.io/python-numpy-tutorial/" target="_blank">[Python Tutorial]</a>, 
               
               <a href="https://cs231n.github.io/setup-instructions/#working-remotely-on-google-colaboratory">[Colab]</a>
@@ -407,7 +407,7 @@
         </td>
         <td>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/bbzlqayzcgg7eg9gee3i3/Lecture-2.pdf?rlkey=y68nf6z5g5cf03eydnvuv51h7&dl=0" target="_blank">[Slides]</a> </li>
+            <li><a href="https://www.dropbox.com/scl/fi/befcom2ndx4giyolrmfha/L2_Linear-Regression.pdf?rlkey=re20fwyihd09bcg2uzzl0nwog&st=32cadppl&dl=0" target="_blank">[Slides]</a> </li>
             <li><a href="https://realpython.com/linear-regression-in-python/" target="_blank">[Linear Regression Python Tutorial]</a> </li>
             <li><a href="https://www.deeplearningbook.org/contents/ml.html" target="_blank">[DL Sec 5.1 to 5.3] </a> </li>
 
