added assignment 1 links

--- a/f24/index.html
+++ b/f24/index.html
@@ -418,6 +418,9 @@
           </ul>
         </td>
         <td> 
+          Assignment 1 out
+          <li><a href="https://www.dropbox.com/scl/fi/rel5mprsfm16xulzbcy8a/lab1a_python_tutorial.ipynb?rlkey=asxtgwvbsglf647glzp808zf5&st=g9e2o3g2&dl=0" target="_blank">[Lab1a: Python Basic]</a> </li>
+          <li><a href="https://www.dropbox.com/scl/fi/lhm3tkzzc97f6hyaoghau/lab1b_linear_regression.ipynb?rlkey=s8xw3u8unotefirgajxep1oc6&st=gkz88qwx&dl=0" target="_blank">[Lab1b: Linear Regression]</a> </li>
         </td>
       </tr>
 
