update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -435,7 +435,7 @@
         </td>
         <td>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/975oedctsp991owqslp4c/Lecture-3.pdf?rlkey=i13ttna57ggbkn1wwwqg5ir0n&dl=0" target="_blank">[Slides]</a> </li>
+            <li><a href="https://www.dropbox.com/scl/fi/befcom2ndx4giyolrmfha/L2_Linear-Regression.pdf?rlkey=re20fwyihd09bcg2uzzl0nwog&st=32cadppl&dl=0" target="_blank">[Slides]</a> </li>
             <!-- <li>[T] Chap. 4.2.1, 4.3</li>
             <li>numpy.org: <a href="https://numpy.org/doc/stable/user/absolute_beginners.html">NumPy 101</a></li> -->
           </ul>
