update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -463,7 +463,7 @@
         </td>
         <td>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/home/csci3399/s24/slides?preview=Lecture+4.pdf" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/2098vkbyph1qlmo6upe7s/L4_Neural-Network.pdf?rlkey=ikfsp40qn44ucoiy6eg8a8lyq&st=8qho79l5&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://d2l.ai/chapter_linear-classification/softmax-regression.html" target="_blank">[D2L Sec 4.1] </a> </li>
             <li><a href="https://www.youtube.com/watch?v=ErfnhcEV1O8&themeRefresh=1" target="_blank">[A short intro to Entropy, Cross-Entropy and KL Divergence] </a> </li>
             <li><a href="https://cs231n.github.io/classification/" target="_blank">[231n Image Classification]</a></li>
