--- a/f24/index.html
+++ b/f24/index.html
@@ -472,8 +472,12 @@
           </ul>
         </td>
         <td>
-<!--           <strike><font color=#800000>lab0 due</font></strike>
-            <br/>ps1 out (dip) -->
+          <em>Assignment 1 due</em>
+                    Assignment 2 out
+                    <li><a href="https://www.dropbox.com/scl/fi/0j3nlt3llwifs7344u03j/lab2a_gradient_descent.ipynb?rlkey=8miyfcysramj8dju9lhydhw8s&st=s9vuk9d4&dl=0" target="_blank">[Lab2a: Gradient Descent]</a> </li>
+                    <li><a href="https://www.dropbox.com/scl/fi/50x3eo95d0i9y762z2avv/lab2b_PyTorch.ipynb?rlkey=dh4x09dqxit2g64uv581i7mxb&st=n41u6e5m&dl=0" target="_blank">[Lab2b: Pytorch Basics]</a> </li>
+                    <li><a href="https://www.dropbox.com/scl/fi/gm6rdcx7uzbbtdg2wjv17/lab2c_linear_classifier.ipynb?rlkey=tkdmpwh9rorrkpovxwerv1oxl&st=iy00lvaf&dl=0" target="_blank">[Lab2c: Linear Classifier]</a> </li>
+                  
         </td>
       </tr>
 
