update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -514,7 +514,7 @@
         </td>
         <td>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/home/csci3399/s24/slides?preview=Lecture+5.pdf" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/caepf4mselyxaugxxj1l6/L5_Multi-Layer-Perceptron.pdf?rlkey=7cu54umc2rjfkph5pswt1md5x&st=ssaej747&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://playground.tensorflow.org/" target="_blank">[MLP web training]</a></li>
             <li><a href="https://cs231n.github.io/classification/" target="_blank">[231n Image Classification]</a></li>
 
