update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -547,7 +547,7 @@
         <td>
             <!-- <i>Maths review: linear algebra</i> -->
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/c1b5gnzy7ge202l9k0lqw/Lecture-6.pdf?rlkey=7ub89fivcm1gshv9utkog9qf7&dl=0">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/fy9o96kiog45sjyrosbs7/L6_Activation-Functions.pdf?rlkey=96g81qlns8rdjz5dxs063tpxg&st=zr9kjzfk&dl=0">[Slides]</a></li>
             <li><a href="https://playground.tensorflow.org/" target="_blank">[MLP web training]</a></li>
             <li><a href="https://cs231n.github.io/classification/" target="_blank">[231n Image Classification]</a></li>
 <!--             <li><a href="https://cs231n.github.io/optimization-1/">[231n Optimization]</a></li>
