update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -583,7 +583,7 @@
         <td>
             <!-- <i>Task I: Region of Interest (ROI) Detection</i> -->
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/f1rvfl8wbzfeqfzjj9sat/Lecture-7.pdf?rlkey=p8zayh0xmxvato9xlroz0djlj&dl=0">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/z8d9zlp922nsimpjhg3ed/L7_CNN.pdf?rlkey=ztqn35m4a0nvj3h23m5162qoe&st=0ofnos8c&dl=0">[Slides]</a></li>
             <li><a href="https://www.deeplearningbook.org/contents/regularization.html">[DL Sec. 7.1]</a>, <a href="https://d2l.ai/chapter_builders-guide/init-param.html">[D2L Sec. 6.3]</a></li>
             <li><a href="https://www.deeplearningbook.org/contents/convnets.html">[DL Sec. 9.1, 9.2]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/why-conv.html">[D2L Sec. 7.1]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/conv-layer.html">[D2L Sec. 7.2]</a></li>
           </ul>
