update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -612,7 +612,7 @@
         <td>
             <!-- <i>Task II: Image Preprocessing</i> -->
           <ul class="materials">
-              <li><a href="https://www.dropbox.com/scl/fi/kjzi5bwswrowxzih49alb/Lecture-8.pdf?rlkey=94xz0yxz6nillmjft56k5g1e0&dl=0" target="_blank">[Slides]</a></li>
+              <li><a href="https://www.dropbox.com/scl/fi/alio14tllfta0n1h6ipat/L8_CNN-2.pdf?rlkey=kdfx2gnp7dxeuebxpdleewhye&st=et14thp1&dl=0" target="_blank">[Slides]</a></li>
               <li><a href="https://setosa.io/ev/image-kernels/" target="_blank">[Image Kernels]</a></li>
               <li><a href="https://www.deeplearningbook.org/contents/convnets.html" target="_blank">[DL Sec. 9.3, 9.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/conv-layer.html" target="_blank">[D2L Sec. 7.2]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/padding-and-strides.html" target="_blank">[D2L Sec. 7.3]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/channels.html" target="_blank">[D2L Sec. 7.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/pooling.html" target="_blank">[D2L Sec. 7.5]</a></li>
 
