update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -625,10 +625,43 @@
         </td>
       </tr>
 
-      <tr class="gray">
+
+      <tr>
+        <td>Fri, Sept. 16</td>
+        <td class="topic">
+            Lecture 8: Convolutional Neural Networks (CNNs) -- Continued
+<!--             <div class="subtopic">
+            Convolution: kernel, receptive field, stride </br>
+            Padding </br>
+            Learning convolutional filters </br>
+            One layer (breadth): multiple kernels </br>
+            K layers (depth): nonlinearity in between </br>
+          </div> -->
+
+            
+        </td>
+        <td>
+            <!-- <i>Task II: Image Preprocessing</i> -->
+          <ul class="materials">
+              <li><a href="https://www.dropbox.com/scl/fi/alio14tllfta0n1h6ipat/L8_CNN-2.pdf?rlkey=kdfx2gnp7dxeuebxpdleewhye&st=et14thp1&dl=0" target="_blank">[Slides]</a></li>
+              <li><a href="https://setosa.io/ev/image-kernels/" target="_blank">[Image Kernels]</a></li>
+              <li><a href="https://www.deeplearningbook.org/contents/convnets.html" target="_blank">[DL Sec. 9.3, 9.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/conv-layer.html" target="_blank">[D2L Sec. 7.2]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/padding-and-strides.html" target="_blank">[D2L Sec. 7.3]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/channels.html" target="_blank">[D2L Sec. 7.4]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/pooling.html" target="_blank">[D2L Sec. 7.5]</a></li>
+
+              
+          </ul>
+        </td>
+
+        <td>
+            <!-- <strike><font color=#800000>lab1 due</font></strike> -->
+        </td>
+      </tr>
+
+
+
+<!--       <tr class="gray">
         <td>Mon, Sept. 16</td>
         <td class="topic">
-          Lecture 9: Convolutional Neural Networks (CNNs)
+          Lecture 9: Convolutional Neural Networks (CNNs) -- Continued
           <div class="subtopic">
             Pooling </br>
             AlexNet </br>
@@ -639,13 +672,13 @@
         <td>
             <i></i>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/3g5xh3ll51ab4yrbu17hq/Lecture-9.pdf?rlkey=e8cn0kiead73w7ryo5pefighx&dl=0" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/alio14tllfta0n1h6ipat/L8_CNN-2.pdf?rlkey=kdfx2gnp7dxeuebxpdleewhye&st=et14thp1&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://d2l.ai/chapter_convolutional-neural-networks/pooling.html" target="_blank">[D2L Sec. 7.5]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/lenet.html" target="_blank">[D2L Sec. 7.6]</a></li>
             <li><a href="https://d2l.ai/chapter_convolutional-modern/alexnet.html" target="_blank">[D2L Sec. 8.1]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/vgg.html" target="_blank">[D2L Sec. 8.2]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/nin.html" target="_blank">[D2L Sec. 8.3]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/googlenet.html" target="_blank">[D2L Sec. 8.4]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/batch-norm.html" target="_blank">[D2L Sec. 8.5]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/resnet.html" target="_blank">[D2L Sec. 8.6]</a></li>
           </ul>
         </td>
         <td></td>
-      </tr>
+      </tr> -->
 
       <tr class="gray">
         <td>Wed, Sept. 18</td>
