--- a/f24/index.html
+++ b/f24/index.html
@@ -627,7 +627,7 @@
 
 
       <tr>
-        <td>Fri, Sept. 16</td>
+        <td>Mon, Sept. 16</td>
         <td class="topic">
             Lecture 8: Convolutional Neural Networks (CNNs) -- Continued    
         </td>
@@ -715,7 +715,11 @@
             
           </ul>
         </td>
-        <td></td>
+        <td>
+          Assignment 3 out 
+          <li><a href="https://www.dropbox.com/home/2024Fall/Assignments">[Lab 3: Autograd and NN]</a></li>
+
+        </td>
         <!--
         <td> 
           Assignment 2 out
@@ -772,6 +776,7 @@
           </ul>
         </td>
         <td>
+          <i>Assignment 3 Due</i>
         </td>
       </tr>
        
