update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -649,7 +649,7 @@
 
 
 
-<!--       <tr class="gray">
+      <tr class="gray">
         <td>Mon, Sept. 16</td>
         <td class="topic">
           Lecture 9: Convolutional Neural Networks (CNNs) -- Continued
@@ -663,18 +663,17 @@
         <td>
             <i></i>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/alio14tllfta0n1h6ipat/L8_CNN-2.pdf?rlkey=kdfx2gnp7dxeuebxpdleewhye&st=et14thp1&dl=0" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/3u2kg6eydm6jisjnc8agc/L9_CNN-3.pdf?rlkey=zgd99y98kjv98ws3vjetywcpl&st=cs2jfxc8&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://d2l.ai/chapter_convolutional-neural-networks/pooling.html" target="_blank">[D2L Sec. 7.5]</a>, <a href="https://d2l.ai/chapter_convolutional-neural-networks/lenet.html" target="_blank">[D2L Sec. 7.6]</a></li>
             <li><a href="https://d2l.ai/chapter_convolutional-modern/alexnet.html" target="_blank">[D2L Sec. 8.1]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/vgg.html" target="_blank">[D2L Sec. 8.2]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/nin.html" target="_blank">[D2L Sec. 8.3]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/googlenet.html" target="_blank">[D2L Sec. 8.4]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/batch-norm.html" target="_blank">[D2L Sec. 8.5]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/resnet.html" target="_blank">[D2L Sec. 8.6]</a></li>
           </ul>
         </td>
         <td></td>
-      </tr> -->
+      </tr>
 
-      <tr class="gray">
+<!--       <tr class="gray">
         <td>Wed, Sept. 18</td>
         <td class="topic">
-          <!-- <a href="https://www.dropbox.com/s/604xsxymlt5ryxv/lab2-opencv.pdf?dl=0">Lab 2: Registration Toolbox</a> -->
           Lecture 10: CNN Architectures
           <div class="subtopic">
             AlexNet, VGGNet, GoogLeNet, BatchNorm, ResNet </br>
@@ -690,7 +689,7 @@
           </ul>
         </td>
         <td></td>
-      </tr>
+      </tr> -->
 
       <tr>
         <td>Fri, Sept. 20</td>
