update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -652,7 +652,7 @@
       <tr class="gray">
         <td>Mon, Sept. 16</td>
         <td class="topic">
-          Lecture 9: Convolutional Neural Networks (CNNs) -- Continued
+          Lecture 9: CNNs
           <div class="subtopic">
             Pooling </br>
             AlexNet </br>
