update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -674,8 +674,8 @@
         </td>
       </tr>
 
-<!--       <tr class="gray">
-        <td>Wed, Sept. 18</td>
+      <tr class="gray">
+        <td>Fri, Sept. 20</td>
         <td class="topic">
           Lecture 10: CNN Architectures
           <div class="subtopic">
@@ -686,15 +686,15 @@
         <td>
             <i></i>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/r61c4t4xfa99qidqsp0wk/Lecture-10.pdf?rlkey=n0e3quqoag4mvqvetvkyg40ks&dl=0" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/ume58xc345sm3gn5mev17/L10_CNN-architectures.pdf?rlkey=hie028ztiv8e5nqnlmfnivw02&st=lqk0cper&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="http://cs231n.stanford.edu/slides/2023/lecture_6.pdf" target="_blank">[CS231n CNN Architectures]</a></li>
             <li><a href="https://d2l.ai/chapter_convolutional-modern/alexnet.html" target="_blank">[D2L Sec. 8.1]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/vgg.html" target="_blank">[D2L Sec. 8.2]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/nin.html" target="_blank">[D2L Sec. 8.3]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/googlenet.html" target="_blank">[D2L Sec. 8.4]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/batch-norm.html" target="_blank">[D2L Sec. 8.5]</a>, <a href="https://d2l.ai/chapter_convolutional-modern/resnet.html" target="_blank">[D2L Sec. 8.6]</a></li>
           </ul>
         </td>
         <td></td>
-      </tr> -->
+      </tr>
 
-      <tr>
+<!--       <tr>
         <td>Fri, Sept. 20</td>
         <td class="topic">
             Lecture 11: Training Neural Networks
@@ -718,22 +718,10 @@
           </ul>
         </td>
         <td>
-          
-
         </td>
-        <!--
-        <td> 
-          Assignment 2 out
-          
-          <li><a href="https://www.dropbox.com/scl/fi/zw1w4sppx9tv8s7n9d7tc/lab2a_gradient_descent.ipynb?rlkey=f08594x86b1qxwr4jjr276ck6&dl=0" target="_blank">[Lab2a: Gradient Descent]</a> </li>
-
-          <li><a href="https://www.dropbox.com/scl/fi/9hkvu5gnw55huria0f84x/lab2b_PyTorch.ipynb?rlkey=d5vq6nxv2sf6c3458yo1yh0fb&dl=0" target="_blank">[Lab2b: PyTorch]</a> </li>
-
-          <li><a href="https://www.dropbox.com/scl/fi/yev05bt37jbjwt98z8gcf/lab2c_linear_classifier.ipynb?rlkey=9u7a53dkekqwc47xq1ynn65uy&dl=0" target="_blank">[Lab2c: Linear Classifier]</a> </li>
+      </tr> -->
 
 
-        </td> -->
-      </tr>
       <tr>
         <td>Mon, Sept. 23</td>
         <td class="topic">
