update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -750,8 +750,7 @@
           Lecture 12: PyTorch Review Session (continued)
           <div class="subtopic">
               PyTorch </br>
-              Final project overview </br>
-              Life cycle of a Machine Learning System </br>
+              Dynamic vs Static graphs </br>
           </div>
         </td>
         <td>
@@ -766,6 +765,28 @@
         </td>
       </tr>
        
+      </tr>
+
+
+
+      <tr class="gray">
+        <td>Mon, Sept. 30</td>
+        <td class="topic">
+          Lecture 13: Final Project Overview
+          <div class="subtopic">
+          Final Project Overview </br>
+          Life cycle of a Machine Learning System </br>
+          Sequential models use cases </br>
+          </div>
+        </td>
+        <td>
+          <ul class="materials">
+            <li><a href="https://www.dropbox.com/scl/fi/ffiql6i31zbsxpw79i7m5/L13_Final-Project-Overview.pdf?rlkey=7kxxuy6pkv0or2fakp17u8c43&st=u6xnoest&dl=0" target="_blank">[Slides]</a></li>
+          </ul>
+        </td>
+        <td>
+
+        </td>
       </tr>
 
 
@@ -793,7 +814,7 @@
       </tr> -->
 
 
-      <tr>
+<!--       <tr>
         <td>Mon, Sept. 30</td>
         <td class="topic">
         Lecture 15: Recurrent Networks: Stability analysis and LSTMs  
@@ -814,13 +835,8 @@
         <td>
 
         </td>
-        <!--
-        <td>
-            Assignment 3 out: 
 
-            <li><a href="https://www.dropbox.com/scl/fi/cg065z23vna9oew9ajiuq/lab3_autograd_and_nn.ipynb?rlkey=y1873vh5wm2dvvkzc61ev7byh&dl=0" target="_blank">[Lab3: Autograd and NN]</a> </li>
-        </td> -->
-      </tr>
+      </tr> -->
 
 
       <tr>
