update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -813,8 +813,8 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Mon, Sept. 30</td>
+      <tr>
+        <td>Fri, Oct. 4</td>
         <td class="topic">
         Lecture 15: Recurrent Networks: Stability analysis and LSTMs  
          <div class="subtopic">
@@ -824,7 +824,7 @@
         </td>
         <td>
             <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/kr5jy0egkeyv61dxxgza0/Lecture-15.pdf?rlkey=7b2erfad1p6fehlt511g7yym3&dl=0" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/rqjkwt7p4xlvcm7vis9js/L15_LSTM.pdf?rlkey=vdrwkmlgde1kzauk821fxgfx1&st=v19nxmkj&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://www.dropbox.com/scl/fi/huhp63uo0io242vihhx0f/rnns.pdf?rlkey=1r99da935tdwz1s67pxle6pdg&e=1&dl=0" target="_blank">[RNNs]</a></li>
             <li><a href="https://www.cs.cmu.edu/~bhiksha/courses/deeplearning/Spring.2019/archive-f19/www-bak11-22-2019/document/lecture/lec13.recurrent2.pdf" target="_blank">[RNN Stability analysis and LSTMs]</a></li>
             
@@ -835,7 +835,7 @@
 
         </td>
 
-      </tr> -->
+      </tr>
 
 
 <!--       <tr>
@@ -853,7 +853,7 @@
       </tr> -->
 
 
-      <tr>
+<!--       <tr>
         <td>Fri, Oct. 4</td>
         <td class="topic">
           Lecture 17: Attention and Transformers
@@ -875,7 +875,7 @@
         </td>
         <td>
         </td>
-      </tr>
+      </tr> -->
 
       <tr>
         <td>Mon, Oct. 7</td>
