update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -838,79 +838,70 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Wed, Oct. 2</td>
+      <tr>
+        <td>Mon, Oct. 7</td>
         <td class="topic">
-          Lecture 16: Recurrent Networks: Stability analysis and LSTMs (2)     
+          Lecture 15: Recurrent Networks: Stability analysis and LSTMs (2)     
         </td>
         <td>
           <ul class="materials">
-          <li><a href="https://www.dropbox.com/scl/fi/77z0632k48vhu5n4j34ss/Lecture-16.pdf?rlkey=f4q52vapi2o2ec8jfux7nkfma&dl=0" target="_blank">[Slides]</a></li>
+          <li><a href="https://www.dropbox.com/scl/fi/rqjkwt7p4xlvcm7vis9js/L15_LSTM.pdf?rlkey=vdrwkmlgde1kzauk821fxgfx1&st=v19nxmkj&dl=0" target="_blank">[Slides]</a></li>
         </td>
 
         <td>
         </td>
-      </tr> -->
+      </tr>
 
 
-<!--       <tr>
-        <td>Fri, Oct. 4</td>
+      <tr>
+          <td align=center colspan="5"><h3><font color=#800000> Module II: Advanced Topics on Deep Learning</font></h3></td>
+      </tr>
+      <tr>
+        <td rowspan=6 style="vertical-align:middle;text-align:center;">Vision Applications<br/></td>
+        <td>Wed, Oct. 9</td>
         <td class="topic">
-          Lecture 17: Attention and Transformers
+          Lecture 16: Attention and Transformers
           <div class="subtopic">
             Self-Attention </br>
             Transformers </br>
               </div>
-          
-          </div>
         </td>
         <td>
           <ul class="materials">
-              <li><a href="https://www.dropbox.com/scl/fi/lztzugqwkddmzuf7ebcii/Lecture-17.pdf?rlkey=cmnmtc6vn2jfmokuwsxbcri97&dl=0" target="_blank">[Slides]</a></li>
+              <li><a href="https://www.dropbox.com/scl/fi/mj5x7g9mfmc2q7jqf2cdz/L16_Attention-and-Transformers.pdf?rlkey=kqyuq8tw1bvgukdv14xmngdeo&st=r5gj2xzm&dl=0" target="_blank">[Slides]</a></li>
               <li><a href="https://arxiv.org/pdf/1706.03762.pdf" target="_blank">[Attention is all you need]</a></li>
               <li><a href="https://arxiv.org/pdf/1810.04805.pdf" target="_blank">[BERT Paper]</a></li>
               <li><a href="http://jalammar.github.io/illustrated-transformer/" target="_blank">[The Illustrated Transformer]</a></li>
               <li><a href="https://arxiv.org/pdf/2207.09238.pdf" target="_blank">[Formal Algorithms for Transformers]</a></li>
           </ul>
+
         </td>
         <td>
         </td>
-      </tr> -->
+      </tr>
 
-      <tr>
+
+<!--       <tr>
         <td>Mon, Oct. 7</td>
         <td class="topic">
           Lecture 18: Attention and Transformers (2)
-
-          <!-- <a href="https://www.dropbox.com/s/d8s6vxvh5ql19jc/lab4-segmentation-toolbox.pdf?dl=0">Lab 4: Segmentation Toolbox</a> -->
-          <!-- Lecture 18: Natural Language Processing: Large Language Models -->
           <div class="subtopic">
           Multi-head Self-Attention </br>
           Mask Self-Attention </br>
-            <!-- BERT & GPT </br> -->
-<!--               Post-processing: Morphological operation
-              <br/>Analysis: Descriptive statistics -->
           </div>
         </td>
         <td>
           <ul class="materials">
             <li><a href="https://www.dropbox.com/scl/fi/runoajcsch1tbwva3kodv/Lecture-18.pdf?rlkey=r6qyo74gg3e790nqdqxndlutg&dl=0" target="_blank">[Slides]</a></li>
- <!--              <li><a href="https://arxiv.org/pdf/1706.03762.pdf" target="_blank">[Attention is all you need]</a></li>
-              <li><a href="https://arxiv.org/pdf/1810.04805.pdf" target="_blank">[BERT Paper]</a></li>
-              <li><a href="http://jalammar.github.io/illustrated-transformer/" target="_blank">[The Illustrated Transformer]</a></li>
-              <li><a href="https://arxiv.org/pdf/2207.09238.pdf" target="_blank">[Formal Algorithms for Transformers]</a></li>
- -->
+ 
           </ul>
         </td>
         <td>
 
         </td>
-        <!--<td>
-          Assignment 3 due (Sept. 27)
-            </td>-->
-      </tr>
+      </tr> -->
 
-      <tr>
+<!--       <tr>
           <td align=center colspan="5"><h3><font color=#800000> Module II: Advanced Topics on Deep Learning</font></h3></td>
       </tr>
       <tr>
@@ -922,24 +913,15 @@
           Encoder-Decoder Attention </br>
           Word Embedding </br>
           Pre-training </br>
-<!--           ViT, DeiT </br>
-          Swin, MViT </br>
-          DETR </br>
-          MLP-like architectures </br> -->
             </div>
         </td>
         <td>
           <li><a href="https://www.dropbox.com/scl/fi/psz25q4kxbavv744gsedd/Lecture-19.pdf?rlkey=1fxfrarvfyusxphiayg4rkbfm&dl=0" target="_blank">[Slides]</a></li>
-<!--             <i>Overview</i>
-          <ul class="materials">
-              <li>[Z] <a href="https://d2l.ai/chapter_introduction/index.html">Chap. 1</a></li>
-          </ul> -->
         </td>
         <td>
-<!--             <a href="https://docs.google.com/spreadsheets/d/1c-18oXsqpeWGUPs-h8H8TnEmVPAC4cR7RurL1TPXXoo/edit#gid=0">fp team sign-up</a>
-            <br/>ps2 out (dip+image) -->
         </td>
-      </tr>
+      </tr> -->
+
       <tr>
         <td>Fri, Oct. 11</td>
         <td class="topic">
