update slides link

--- a/f24/index.html
+++ b/f24/index.html
@@ -881,10 +881,10 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Mon, Oct. 7</td>
+      <tr>
+        <td>Fri, Oct. 11</td>
         <td class="topic">
-          Lecture 18: Attention and Transformers (2)
+          Lecture 16: Attention and Transformers (2)
           <div class="subtopic">
           Multi-head Self-Attention </br>
           Mask Self-Attention </br>
@@ -892,14 +892,14 @@
         </td>
         <td>
           <ul class="materials">
-            <li><a href="https://www.dropbox.com/scl/fi/runoajcsch1tbwva3kodv/Lecture-18.pdf?rlkey=r6qyo74gg3e790nqdqxndlutg&dl=0" target="_blank">[Slides]</a></li>
+            <li><a href="https://www.dropbox.com/scl/fi/mj5x7g9mfmc2q7jqf2cdz/L16_Attention-and-Transformers.pdf?rlkey=kqyuq8tw1bvgukdv14xmngdeo&st=r5gj2xzm&dl=0" target="_blank">[Slides]</a></li>
  
           </ul>
         </td>
         <td>
 
         </td>
-      </tr> -->
+      </tr>
 
 <!--       <tr>
           <td align=center colspan="5"><h3><font color=#800000> Module II: Advanced Topics on Deep Learning</font></h3></td>
@@ -922,32 +922,24 @@
         </td>
       </tr> -->
 
-      <tr>
+
+<!--       <tr>
         <td>Fri, Oct. 11</td>
         <td class="topic">
           Lecture 20: Training Large Language Models
-          <!-- Lecture 16: Video Understanding -->
             <div class="subtopic">
             Self-Supervised Learning </br>
           Data Scaling </br>
-<!--             Video classification </br>
-            3D CNNs </br>
-            Two-stream networks </br>
-            Multimodal video understanding </br> -->
             </div>
         </td>
         <td>
           <li><a href="https://www.dropbox.com/scl/fi/2z7g0r9pod5a6cgfacy9v/Lecture-20.pdf?rlkey=fk5tmpul1hwc9q94aounx2lxx&dl=0" target="_blank">[Slides]</a></li>
-            <!-- <i>AlexNet: linear layer</i>
-          <ul class="materials">
-              <li>[Z] <a href="https://d2l.ai/chapter_linear-regression/index.html">Chap. 3</a></li>
-          </ul> -->
         </td>
 
         <td>
             
         </td>
-      </tr>
+      </tr> -->
 
       <tr>
         <td align=center colspan="4">No Class (Fall Break)</td>
@@ -956,14 +948,6 @@
       <tr>
         <td>Wed, Oct. 16</td>
        <td class="topic">
-
-<!--             Lecture 17: Object Detection
-
-            
-          <div class="subtopic">
-Single-stage detectors </br>
-Two-stage detectors </br> -->
-
             Lecture 20: Training Large Language Models (2)
 
             <div class="subtopic">
