--- a/f24/index.html
+++ b/f24/index.html
@@ -937,6 +937,7 @@
             </div>
         </td>
         <td>
+          <ul class="materials">
           <li><a href="https://www.dropbox.com/scl/fi/tgpzr2he68ckkwpmzsdz0/L17_Transformer-and-BERT.pdf?rlkey=lad0rkmnmwky23gax603gpllz&st=7spntg7d&dl=0" target="_blank">[Slides]</a></li>
         </td>
 
