fix assignment 4 link

--- a/f24/index.html
+++ b/f24/index.html
@@ -877,8 +877,11 @@
         </td>
         <td>
           Assignment 4 Part 1 Out
-          <a href="https://www.dropbox.com/scl/fi/9t6iqyu9ygl5dfgkia2pt/lab4_neural_machine_translation.ipynb?rlkey=umy89kkfgexkxkcfmtgql15lp&st=k3m8e8b2&dl=0">[Lab 4: Neural Machine Translation]</a>
-        </td>
+          <ul>
+            <li><a href="https://www.dropbox.com/scl/fi/9t6iqyu9ygl5dfgkia2pt/lab4_neural_machine_translation.ipynb?rlkey=umy89kkfgexkxkcfmtgql15lp&st=k3m8e8b2&dl=0">[Lab 4: Neural Machine Translation]</a>
+            </li>
+          </ul>
+          </td>
       </tr>
 
 
